添加控制器立刻触发方法
